--- a/css/style.css
+++ b/css/style.css
@@ -7,18 +7,16 @@ html{
 }
 
 header{
+    margin: 10px;
     border: 1px solid red;
-    padding: 5px;
+    padding: 10px;
     background-color:#6E6E6E;
 
 }
-header nav {
-    /* margin-top: 10px; */
-    /* padding-left: 30px; */
-}
- nav ul li {
+
+nav ul li {
     display: inline-block;
-    margin-left: 250px;
+    margin-left: 150px;
     margin-top: 50px;
     margin-bottom: 50px;
     width: 100px;
@@ -29,28 +27,74 @@ nav ul li a {
 color: #DDD;
 }
 
-.topp {
-    margin-bottom: 20px;
-    margin-top: 20px;
-    margin-left: 5%;
+/* .top {
+    margin-bottom: 50px;
+    margin-top: 50px;
+background-color: black    ;
+} */
+
+
+
+#top img {
+    border: 2px solid red;
+    width: 100%;
+    margin: 50px;
+    /* padding: 10px; */
 }
 
-img {
-    color:black;
-    /* width: 100%; */
+#middel {
+    border: 1px solid black;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+
+#middel img {
+
+    margin: 50px;
+    width: 26%;
+    padding: 10px;
+}
+
+#bottom1 {
+    border: 1px solid red;
+    
+}
+#bottom2 h3 {
+    font-weight: bolder;
+    text-align:center;
+}
+
+
+
+#bottom1 img{
+    margin-left: 50px;
+    float:left;
 
 
 }
 
-nav ul {
-    position: relative;
+
+#bottom2  { 
+    height: 400px;
+    border: 2px solid green;
+margin-left:  532px;
+margin-right: 50px;
+margin-bottom: 0px;
+margin-top:1000px;
+    clear:right;
+    display:-webkit-inline-flex;
+
+/* float:inherit;     */
 }
 
-nav ul li :first-child {
-    /* position: absolute; */
-    /* left :100px; */
+#bottom2 p {
+    /* display:inline-flex; */
+    overflow:scroll;
 }
-
 footer{
+    border: 2px solid black;
     clear: both;
+width: 100%;
+padding: 5%;
+    background-color:#6E6E6E;
 }
