--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,36 @@ html{
     scroll-behavior: smooth;
 }
 
+body{
+    border: 3px solid black;
+    margin: 20px;
+}
+/* #top , #middel , #bottom1 , #bottom2 {
+    margin: 20px;
+} */
 header{
     margin: 10px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     padding: 10px;
     background-color:#6E6E6E;
 
 }
 
+header img{
+    /* border: 2px solid green; */
+    padding-left: 48px;
+padding-right: 20px;
+    margin-bottom: -100px;
+}
+
 nav ul li {
+    padding: 10px;
     display: inline-block;
-    margin-left: 150px;
+    margin-left: 250px;
     margin-top: 50px;
     margin-bottom: 50px;
     width: 100px;
+    margin-right: -20px;
 }
 
 nav ul li a {
@@ -36,24 +52,50 @@ background-color: black    ;
 
 
 #top img {
-    border: 2px solid red;
-    width: 100%;
-    margin: 50px;
-    /* padding: 10px; */
+    /* border: 2px solid red; */
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  margin-bottom: 20px;
+    
 }
 
 #middel {
-    border: 1px solid black;
-    margin-right: 50px;
-    margin-left: 50px;
+    position: relative;
+    /* border: 1px solid black; */
+    margin-right: 10px;
+    margin-left: 20px;
+
+}
+#middel img:first-child  {
+    /* border: 3px solid green; */
+    margin-left: 40px;
+    padding-right: 200px;
+    padding-left: 10px;
+
+}
+
+
+#middel img:last-child  {
+    /* border: 3px solid green; */
+    margin-right: 51px;
+    padding-left: 210px;
 }
 
 #middel img {
+    display:inline-block;}
 
-    margin: 50px;
-    width: 26%;
+    /* margin-left: auto;
+    margin-right: auto; */
+    /* width: 20%;
     padding: 10px;
-}
+    margin-left: 20px;
+    margin-right: 160px; */
+
+    /* margin: 30px;
+    width: 25%;
+    padding: 10px;
 
 #bottom1 {
     border: 1px solid red;
@@ -85,14 +127,60 @@ margin-top:1000px;
     display:-webkit-inline-flex;
 
 /* float:inherit;     */
+/* } */
+
+
+
+#bottom1 {
+    /* border: 3px solid red; */
+
+    display:block;
+    margin-top: 40px;
+    margin-left: 70px;
+    margin-right: auto;
+    width: 33%;
+    margin-bottom: 20px;
 }
 
-#bottom2 p {
-    /* display:inline-flex; */
-    overflow:scroll;
+
+#bottom2{
+
+    /* border: 3px solid blue; */
+
+
+
+    display: block;
+    margin-top: -426px;
+    margin-left: 590px;
+    margin-right: 10px;
+    width: 55%;
+    margin-bottom: 20px;
+    height: 408px;
 }
+
+
+
+
+#bottom2 {
+
+overflow: scroll;}
+
+
+
+#bottom2 h3 {
+    font-size: x-large;
+    font-weight: bolder;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+
+
+
+
+
+
 footer{
-    border: 2px solid black;
+    /* border: 2px solid black; */
     clear: both;
 width: 100%;
 padding: 5%;
